add botao de inicializaçao do AR

--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
 		<title>LocAR.js - Hello World</title>
 		<script type="module" src="src/main.js"></script>
 	</head>
-	<body></body>
+	<body>
+		<button id="startBtn" style="position: absolute; z-index: 99; top: 20px; left: 20px;">
+			Iniciar RA
+		</button>
+	</body>
 </html>
