--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>LocAR.js - Hello World</title>
-		<script type="module" src="src/main.js"></script>
-	</head>
-	<body>
-		
-	</body>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Teste LocAR.js</title>
+</head>
+<body>
+	
+	<script type="module" src="src/main.js"></script>
+</body>
 </html>
